syntax = "proto2";

package fs.proto;

message File
{
	enum FileType
	{
		REGULAR				= 0;
		DIRECTORY			= 1;
		SYMLINK				= 2;
		OTHER				= 3;
	}
	required string filename	= 1;
	optional uint64 size		= 2;	// only valid for REGULAR file
	required uint64 mtime		= 3;	// time of last data modification
	required FileType file_type	= 4;
}

message FileList
{
	required string path		= 1;
    	repeated File file		= 2;
}



message Packet
{
	required uint64 packet_id 	= 1;
	required bytes data 		= 2;
}

message Request
{
	enum RequestType
	{
		LOGIN				= 10;	// try to login
		FILELIST			= 0;	// request for a filelist
                MKDIR				= 8;	// create a new directory

		UPLOAD				= 1;	// initiate a new UPLOAD task
		DOWNLOAD			= 2;	// initiate a new DOWNLOAD task
		CANCEL				= 3;	// cancel a task
		PAUSE				= 4;	// pause a task
		RESUME				= 5;	// resume a task
		RENAME				= 6;	// rename or move a existing file
		REMOVE				= 7;	// delete a file
		PACKET				= 9;	// send a packet

	}
	required RequestType req_type	= 1;
	optional string username	= 8;
	optional string password	= 9;
	optional string token		= 2;
	optional string remote_path	= 3;
	
	optional uint64 packet_no	= 4;	// number of packets that a UPLOAD task will send
	optional uint64 task_id		= 5;	// task_id of which CANCEL/PAUSE/RESUME/PACKET
	optional string new_path	= 6;	// new path of a RENAMEd file
	optional Packet packet		= 7;
}


message Response
{
	enum ResponseType
	{
		SUCCESS				= 0;
		NOSUCHUSER			= 1;	// no such user
		ILLEGALPASSWD			= 2;	// pasword is not correct
		UNKNOWN				= 3;	// unkown error
		NORESPONSE			= 4;	// cannot get response from server
		ILLEGALTOKEN			= 5;	// token is illegal relogin is needed
		ILLEGALPATH			= 6;	// filepath is illegal

		FAILED				= 7;

	}
	required ResponseType resp_type	= 1;
	optional string	token		= 5;	// token generate by server when login successfully
	optional FileList file_list   	= 2;
	
	optional uint64 task_id		= 3;	// task_id of a UPLOAD task
	optional uint64 packet_no	= 4;	// number of packets that a DOWNLOAD task will receive
	
}





