syntax = "proto2";

package fs.proto;



message Task{
	enum TaskStatus{
		UPLOAD_INIT				= 0;
    		UPLOADING				= 1;
    		UPLOADED				= 2;
    		UPLOAD_PAUSED				= 3;
    		UPLOAD_PAUSING				= 4;
    		UPLOAD_RESUME				= 5;

    		DOWNLOAD_INIT				= 6;
    		DOWNLOADING				= 7;
    		DOWNLOADED				= 8;
    		DOWNLOAD_PAUSED				= 9;
    		DOWNLOAD_PAUSING			= 10;
    		DOWNLOAD_RESUME				= 11;

    		CANCELING				= 12;
    		CANCELED				= 13;
		
		FAILED					= 14;
		FAILING					= 15;	

	}
	required uint64 	task_id			= 1;
	optional string 	localbasepath		= 2;
	required string 	remotebasepath		= 3;
	required string 	filename		= 4;
	required uint64		total_packet_no		= 5;
	required TaskStatus	task_status		= 6;
	optional uint64 	received_packet_no	= 7;
	optional uint64 	sent_packet_no		= 8;
	optional uint64		last_packet_time	= 9;

}



